--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,6 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family:Arial, Helvetica, sans-serif;
   }
   
